chat実装したけどうごくかわらんねぇ
